# nerves

./: .gitignore  BUILD.bazel  BUILD.vendor  Gopkg.toml  WORKSPACE  cc_repositories.bzl  dep.sh  go.mod  go.sum  repositories.bzl
lib/geoset/: BUILD.bazel  geoset.go  geoset_test.go
lib/stream/: BUILD.bazel  sink.go  source.go  source_test.go
services/domotics/: BUILD.bazel  README.md  api.go  bridge.proto  bridge_db.go  bridge_instance.go  building.proto  device.proto  hub.go  persister.go  proxy.go  proxy_instance.go  service.go  state.go  state_test.go  watcher.go
services/domotics/bridge/: BUILD.bazel  README.md  advertiser.go  bottlerocket.go  bridge.proto  db.go  hub.go  hue.go  hue_db.go  monitor.go  monopamp.go  sync_bridge_service.go  sync_bridge_service_test.go
services/domotics/bridge/cmd/bottlerocketd/: BUILD.bazel  README.md  bottlerocket.go  main.go
services/domotics/bridge/cmd/bridgecli/: BUILD.bazel  README.md  main.go
services/domotics/bridge/cmd/consoled/: BUILD.bazel  README.md  console.go  main.go
services/domotics/bridge/cmd/deconzd/: BUILD.bazel  README.md  color.go  main.go  service.go
services/domotics/bridge/cmd/hubd/: BUILD.bazel  main.go  monitor.go
services/domotics/bridge/cmd/monitord/: BUILD.bazel  main.go
services/domotics/bridge/cmd/monopampd/: BUILD.bazel  README.md  main.go  monopamp.go
services/domotics/bridge/cmd/nanoleafd/: BUILD.bazel  README.md  main.go  nanoleaf.go  service.go
services/domotics/bridge/mock/: BUILD.bazel  README.md  async_bridge.go  device.go  persistent_bridge.go  sync_bridge.go
services/domotics/bridge/remote/: BUILD.bazel  service.go
services/domotics/building/: BUILD.bazel  api.go  building.proto  persister.go  service.go  state.go  state_test.go
services/domotics/building/cmd/buildingcli/: BUILD.bazel  main.go
services/domotics/building/cmd/buildingd/: BUILD.bazel  main.go
services/domotics/cmd/bottlerocketd/: BUILD.bazel  bottlerocket.go  main.go
services/domotics/cmd/buildingcli/: BUILD.bazel  main.go
services/domotics/cmd/buildingd/: BUILD.bazel  main.go
services/domotics/cmd/devicecli/: BUILD.bazel  README.md  main.go
services/domotics/cmd/deviced/: BUILD.bazel  README.md  hue.go  main.go  monopamp.go  proxy.go  sample_config.yaml
services/domotics/cmd/domoticsd/: BUILD.bazel  README.md  bottlerocket.go  hue.go  main.go  monopamp.go  proxy.go
services/domotics/cmd/huecli/: BUILD.bazel  README.md  main.go
services/domotics/cmd/mockdeviced/: BUILD.bazel  README.md  main.go
services/domotics/cmd/proxyd/: BUILD.bazel  README.md  main.go
services/domotics/integrations/googlehome/: BUILD.bazel  googlehome.proto
services/domotics/integrations/googlehome/cmd/googlebridged/: BUILD.bazel  README.md  main.go  proxy.go
services/domotics/integrations/googlehome/cmd/googlerelayd/: BUILD.bazel  README.md  main.go  mock_provider.go
services/domotics/integrations/googlehome/cmd/relayd/: BUILD.bazel  mock_provider.go
services/domotics/integrations/googlehome/relay/: BUILD.bazel  api.go  provider_service.go  remote_provider.go
services/domotics/migrations/: base.sql
services/feed/: BUILD.bazel  feed.proto
services/feed/aggregator/: BUILD.bazel  api.go  db.go  provider.go  state.go
services/feed/aggregator/cmd/aggregatord/: BUILD.bazel  main.go
services/feed/aggregator/cmd/rssdump/: BUILD.bazel  main.go
services/feed/aggregator/translators/: BUILD.bazel  cbc.go
services/mind/: BUILD.bazel  domotics.go  echo.go  message.proto  news.go  service.go  slack.go  transit.go  weather.go
services/mind/cmd/mind/: BUILD.bazel  main.go
services/news/: BUILD.bazel  api.go  bbc_feed.go  cbc_feed.go  cbc_feed_test.go  news.proto
services/news/cmd/newsd/: BUILD.bazel  main.go
services/policy/: BUILD.bazel  action.go  condition.go  condition_test.go  engine.go  policy.go  policy.proto  state.go
services/policy/cmd/policyd/: BUILD.bazel  main.go
services/tmp/: BUILD.bazel  hub.go  hue.go
services/tmp/cmd/bridges/bottlerocketd/: BUILD.bazel  bottlerocket.go
services/tmp/cmd/domoticsd/: BUILD.bazel  hue.go
services/tmp/cmd/mockdeviced/: BUILD.bazel  main.go
services/transit/: BUILD.bazel  agency.go  arrival.go  calendar.go  feed.go  route.go  service.go  stop.go  stop_time.go  transit.proto  trip.go
services/transit/cmd/gtfsdump/: BUILD.bazel  main.go
services/transit/cmd/transitd/: BUILD.bazel  main.go
services/transit/gtfs/: BUILD.bazel  agency.go  calendar.go  calendar_date.go  dataset.go  route.go  stop.go  stop_time.go  trip.go  type.go
services/transit/gtfs_realtime/: BUILD.bazel
services/ui/tboard/: README.md
services/ui/tboard/cmd/tboardcli/: BUILD.bazel  main.go  widget_sink.go
services/ui/tboard/widget/: BUILD.bazel  article_detail.go  articles.go  debug.go  device_detail.go  devices.go  time.go  transit.go  types.go  weather_condition.go  weather_forecast.go  weather_forecast_test.go
services/users/: BUILD.bazel  user.proto
services/weather/: BUILD.bazel  api.go  environment_canada_feed.go  environment_canada_feed_test.go  weather.proto
services/weather/cmd/envcanlocationlister/: crawler.go  geolocator.go  main.go
services/weather/cmd/weathercli/: BUILD.bazel  main.go
services/weather/cmd/weatherd/: BUILD.bazel  main.go
services/weather/envcan/: BUILD.bazel  README.md  service.go  station.go  station_test.go
services/weather/envcan/cmd/getstations/: BUILD.bazel  README.md  crawler.go
services/weather/noaa/: BUILD.bazel  service.go  station.go
services/weather/noaa/cmd/noaacli/: BUILD.bazel  main.go
