load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "geoset",
    srcs = ["geoset.go"],
    importpath = "github.com/rmrobinson/nerves/lib/geoset",
    visibility = ["//visibility:public"],
)

go_test(
    name = "geoset_test",
    srcs = ["geoset_test.go"],
    embed = [":geoset"],
    deps = ["@com_github_stretchr_testify//assert"],
)
