load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "stream",
    srcs = [
        "sink.go",
        "source.go",
    ],
    importpath = "github.com/rmrobinson/nerves/lib/stream",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_uuid//:uuid",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "stream_test",
    srcs = ["source_test.go"],
    embed = [":stream"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@org_uber_go_zap//zaptest",
    ],
)
