load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "faltung_nerves_domotics_proto",
    srcs = [
        "bridge.proto",
        "device.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "faltung_nerves_domotics_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rmrobinson/nerves/services/domotics",
    proto = ":faltung_nerves_domotics_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "api.go",
        "bridge_db.go",
        "bridge_instance.go",
        "hub.go",
        "proxy.go",
        "proxy_instance.go",
    ],
    embed = [":faltung_nerves_domotics_go_proto"],
    importpath = "github.com/rmrobinson/nerves/services/domotics",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
        "//vendor/github.com/google/uuid:go_default_library",
        "//vendor/github.com/mattn/go-sqlite3:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/google.golang.org/grpc/codes:go_default_library",
        "//vendor/google.golang.org/grpc/peer:go_default_library",
        "//vendor/google.golang.org/grpc/status:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
