load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "faltung_nerves_mind_proto",
    srcs = ["message.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "faltung_nerves_mind_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rmrobinson/nerves/services/mind",
    proto = ":faltung_nerves_mind_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "domotics.go",
        "echo.go",
        "news.go",
        "service.go",
        "slack.go",
        "transit.go",
        "weather.go",
    ],
    embed = [":faltung_nerves_mind_go_proto"],
    importpath = "github.com/rmrobinson/nerves/services/mind",
    visibility = ["//visibility:public"],
    deps = [
        "//services/domotics:go_default_library",
        "//services/news:go_default_library",
        "//services/transit:go_default_library",
        "//services/weather:go_default_library",
        "//vendor/github.com/google/uuid:go_default_library",
        "//vendor/github.com/nlopes/slack:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/google.golang.org/grpc/codes:go_default_library",
        "//vendor/google.golang.org/grpc/status:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
    ],
)
