load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "mind_proto",
    srcs = ["message.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//services/users:users_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "mind_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rmrobinson/nerves/services/mind",
    proto = ":mind_proto",
    visibility = ["//visibility:public"],
    deps = ["//services/users:go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "domotics.go",
        "echo.go",
        "news.go",
        "service.go",
        "slack.go",
        "transit.go",
        "weather.go",
    ],
    embed = [":mind_go_proto"],
    importpath = "github.com/rmrobinson/nerves/services/mind",
    visibility = ["//visibility:public"],
    deps = [
        "//services/news:go_default_library",
        "//services/transit:go_default_library",
        "//services/users:go_default_library",
        "//services/weather:go_default_library",
        "//vendor/github.com/google/uuid:go_default_library",
        "//vendor/github.com/nlopes/slack:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/google.golang.org/grpc/codes:go_default_library",
        "//vendor/google.golang.org/grpc/status:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_rmrobinson_nerves//services/domotics:go_default_library",
    ],
)
