load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "mind_proto",
    srcs = ["message.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//services/users:users_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "mind_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rmrobinson/nerves/services/mind",
    proto = ":mind_proto",
    visibility = ["//visibility:public"],
    deps = ["//services/users"],
)

go_library(
    name = "mind",
    srcs = [
        "domotics.go",
        "echo.go",
        "news.go",
        "service.go",
        "slack.go",
        "transit.go",
        "weather.go",
    ],
    embed = [":mind_go_proto"],
    importpath = "github.com/rmrobinson/nerves/services/mind",
    visibility = ["//visibility:public"],
    deps = [
        "//services/domotics/bridge",
        "//services/news",
        "//services/transit",
        "//services/users",
        "//services/weather",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_google_uuid//:uuid",
        "@com_github_nlopes_slack//:slack",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_uber_go_zap//:zap",
    ],
)
