load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "faltung_nerves_news_proto",
    srcs = ["news.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "faltung_nerves_news_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rmrobinson/nerves/services/news",
    proto = ":news_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "news",
    srcs = [
        "api.go",
        "bbc_feed.go",
        "cbc_feed.go",
    ],
    embed = [":faltung_nerves_news_go_proto"],
    importpath = "github.com/rmrobinson/nerves/services/news",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_mmcdole_gofeed//:gofeed",
        "@org_golang_x_net//html",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "news_test",
    srcs = ["cbc_feed_test.go"],
    embed = [":news"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@org_uber_go_zap//zaptest",
    ],
)

proto_library(
    name = "news_proto",
    srcs = ["news.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)
