load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "faltung_nerves_policy_proto",
    srcs = ["policy.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "faltung_nerves_policy_go_proto",
    importpath = "github.com/rmrobinson/nerves/services/policy",
    proto = ":faltung_nerves_policy_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "action.go",
        "condition.go",
        "engine.go",
        "policy.go",
        "state.go",
    ],
    embed = [":faltung_nerves_policy_go_proto"],
    importpath = "github.com/rmrobinson/nerves/services/policy",
    visibility = ["//visibility:public"],
    deps = [
        "//services/domotics:go_default_library",
        "//services/weather:go_default_library",
        "//vendor/github.com/robfig/cron:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["condition_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//services/weather:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/go.uber.org/zap/zaptest:go_default_library",
    ],
)
