load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "policy_proto",
    srcs = ["policy.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//services/domotics/bridge:bridge_proto",
        "//services/mind:mind_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "policy_go_proto",
    importpath = "github.com/rmrobinson/nerves/services/policy",
    proto = ":policy_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//services/domotics/bridge",
        "//services/mind",
    ],
)

go_library(
    name = "policy",
    srcs = [
        "condition.go",
        "engine.go",
        "state.go",
    ],
    embed = [":policy_go_proto"],
    importpath = "github.com/rmrobinson/nerves/services/policy",
    visibility = ["//visibility:public"],
    deps = [
        "//services/domotics/bridge",
        "//services/weather",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_robfig_cron_v3//:cron",
        "@org_golang_google_grpc//:go_default_library",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "policy_test",
    srcs = ["condition_test.go"],
    embed = [":policy"],
    deps = [
        "//services/domotics/bridge",
        "//services/weather",
        "@com_github_stretchr_testify//assert",
        "@org_uber_go_zap//zaptest",
    ],
)
