load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "transit_realtime_proto",
    srcs = ["gtfs-realtime.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "transit_realtime_go_proto",
    importpath = "github.com/rmrobinson/nerves/services/transit",
    proto = ":transit_realtime_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "feed.go",
        "route.go",
        "service.go",
        "stop.go",
        "stop_time.go",
        "trip.go",
    ],
    embed = [":transit_realtime_go_proto"],
    importpath = "github.com/rmrobinson/nerves/services/transit",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/geoset:go_default_library",
        "//services/transit/gtfs:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)
