load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "arrival.go",
        "feed.go",
        "route.go",
        "service.go",
        "stop.go",
        "trip.go",
    ],
    embed = [":faltung_nerves_transit_go_proto"],
    importpath = "github.com/rmrobinson/nerves/services/transit",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/geoset:go_default_library",
        "//services/transit/gtfs:go_default_library",
        "//services/transit/gtfs_realtime:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/google.golang.org/grpc/codes:go_default_library",
        "//vendor/google.golang.org/grpc/status:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
    ],
)

proto_library(
    name = "faltung_nerves_transit_proto",
    srcs = ["transit.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "faltung_nerves_transit_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rmrobinson/nerves/services/transit",
    proto = ":faltung_nerves_transit_proto",
    visibility = ["//visibility:public"],
)
