load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "faltung_nerves_users_proto",
    srcs = ["user.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "faltung_nerves_users_go_proto",
    importpath = "github.com/rmrobinson/nerves/services/users",
    proto = ":faltung_nerves_users_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":faltung_nerves_users_go_proto"],
    importpath = "github.com/rmrobinson/nerves/services/users",
    visibility = ["//visibility:public"],
)
