load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "faltung_nerves_weather_proto",
    srcs = ["weather.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "faltung_nerves_weather_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rmrobinson/nerves/services/weather",
    proto = ":faltung_nerves_weather_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "api.go",
        "environment_canada_feed.go",
    ],
    embed = [":faltung_nerves_weather_go_proto"],
    importpath = "github.com/rmrobinson/nerves/services/weather",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/mmcdole/gofeed:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["environment_canada_feed_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
