load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "weather_proto",
    srcs = ["weather.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "weather_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rmrobinson/nerves/services/weather",
    proto = ":weather_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "weather",
    srcs = ["api.go"],
    embed = [":weather_go_proto"],
    importpath = "github.com/rmrobinson/nerves/services/weather",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/geoset",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_uber_go_zap//:zap",
    ],
)
