load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bridge_proto",
    srcs = ["bridge.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "bridge_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rmrobinson/nerves/services/domotics/bridge",
    proto = ":bridge_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "advertiser.go",
        "hub.go",
        "sync_bridge_service.go",
    ],
    embed = [":bridge_go_proto"],
    importpath = "github.com/rmrobinson/nerves/services/domotics/bridge",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:go_default_library",
        "//vendor/github.com/koron/go-ssdp:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/google.golang.org/grpc/codes:go_default_library",
        "//vendor/google.golang.org/grpc/peer:go_default_library",
        "//vendor/google.golang.org/grpc/status:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
