load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bridge_proto",
    srcs = ["bridge.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "bridge_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rmrobinson/nerves/services/domotics/bridge",
    proto = ":bridge_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "bridge",
    srcs = [
        "advertiser.go",
        "hub.go",
        "monitor.go",
        "sync_bridge_service.go",
    ],
    embed = [":bridge_go_proto"],
    importpath = "github.com/rmrobinson/nerves/services/domotics/bridge",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_koron_go_ssdp//:go-ssdp",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//status",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "bridge_test",
    timeout = "short",
    srcs = ["sync_bridge_service_test.go"],
    embed = [":bridge"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@org_uber_go_zap//zaptest",
    ],
)
