load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "building_proto",
    srcs = ["building.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//services/domotics/bridge:bridge_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

go_proto_library(
    name = "building_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rmrobinson/nerves/services/domotics/building",
    proto = ":building_proto",
    visibility = ["//visibility:public"],
    deps = ["//services/domotics/bridge:go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "api.go",
        "persister.go",
        "service.go",
        "state.go",
    ],
    embed = [":building_go_proto"],
    importpath = "github.com/rmrobinson/nerves/services/domotics/building",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:go_default_library",
        "//services/domotics/bridge:go_default_library",
        "//vendor/github.com/davecgh/go-spew/spew:go_default_library",
        "//vendor/github.com/google/uuid:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/google.golang.org/grpc/codes:go_default_library",
        "//vendor/google.golang.org/grpc/peer:go_default_library",
        "//vendor/google.golang.org/grpc/status:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
    ],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["state_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//services/domotics/bridge:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
