load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "building_proto",
    srcs = ["building.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//services/domotics/bridge:bridge_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

go_proto_library(
    name = "building_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/rmrobinson/nerves/services/domotics/building",
    proto = ":building_proto",
    visibility = ["//visibility:public"],
    deps = ["//services/domotics/bridge"],
)

go_library(
    name = "building",
    srcs = [
        "api.go",
        "persister.go",
        "service.go",
        "state.go",
    ],
    embed = [":building_go_proto"],
    importpath = "github.com/rmrobinson/nerves/services/domotics/building",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream",
        "//services/domotics/bridge",
        "@com_github_davecgh_go_spew//spew",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_uuid//:uuid",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//status",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "building_test",
    timeout = "short",
    srcs = ["state_test.go"],
    embed = [":building"],
    deps = [
        "//services/domotics/bridge",
        "@com_github_stretchr_testify//assert",
    ],
)
