load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gtfs",
    srcs = [
        "agency.go",
        "calendar.go",
        "calendar_date.go",
        "dataset.go",
        "route.go",
        "stop.go",
        "stop_time.go",
        "trip.go",
        "type.go",
    ],
    importpath = "github.com/rmrobinson/nerves/services/transit/gtfs",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gocarina_gocsv//:gocsv",
        "@org_uber_go_zap//:zap",
    ],
)
