load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "transit_realtime_proto",
    srcs = ["gtfs-realtime.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "transit_realtime_go_proto",
    importpath = "github.com/rmrobinson/nerves/services/transit/gtfs_realtime",
    proto = ":transit_realtime_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":transit_realtime_go_proto"],
    importpath = "github.com/rmrobinson/nerves/services/transit/gtfs_realtime",
    visibility = ["//visibility:public"],
)
