load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "envcan",
    srcs = [
        "service.go",
        "station.go",
    ],
    importpath = "github.com/rmrobinson/nerves/services/weather/envcan",
    visibility = ["//visibility:public"],
    deps = [
        "//services/weather",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_mmcdole_gofeed//:gofeed",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "envcan_test",
    srcs = ["station_test.go"],
    embed = [":envcan"],
    deps = [
        "//services/weather",
        "@com_github_stretchr_testify//assert",
    ],
)
